# VTerm

./: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md
app/: Cargo.toml
app/src/: config.rs  lua_runtime.rs  main.rs  pty.rs  render.rs  terminal.rs
config/: config.lua.example
lua/: bootstrap.lua
scripts/: package_macos_app.sh  package_release_dmg.sh
